<resources>
    <string name="app_name">Parqueadero UCO</string>
    <string name="bienvenido">Bienvenido (a) escoja una opción</string>
    <string name="configurar_tarifa">Configurarción de tarifas</string>
    <string name="listado_tarifas">Listado de tarifas</string>
    <string name="menu_principal">Menu principal</string>
    <string name="registro_tarifa">Registrar tarifa</string>
    <string name="guardar">Guardar</string>
    <string name="digite_nombre_tarifa">Digite nombre tarifa</string>
    <string name="digite_valor_tarifa">Digite un valor de tarifa</string>
    <string name="requerido">Requerido</string>
    <string name="successfully">La información se ha guardado satisfactoriamente</string>
    <string name="tarifas">Tarifas</string>
    <string name="sin_tarifas">No existen tarifas configuradas en el sistema</string>
    <string name="registrar_ingreso">Registrar ingreso</string>
    <string name="registrar_salida">Registrar salida</string>
    <string name="totalPagar">Total a pagar:</string>
    <string name="cantidadHoras">Cantidad horas:</string>
    <string name="registrsr_ingreso_salida">Registrar ingresos y salidas</string>
    <string name="digitar_placa">Digita una placa</string>
    <string name="buscar">Buscar</string>
    <string name="debe_seleccionar_tarifa">Debe seleccionar una tarifa</string>
    <string name="informacion_guardada_exitosamente">La información se ha guardado exitosamente</string>
    <string name="placa_no_valida">La placa no es valida ingresar de nuevo</string>
    <string name="salida_registrada_exitosamente">La Salida del vehiculo se registro exitosamente.</string>
    <string name="opcion_reporte">Reporte Parqueadero</string>
    <string name="titulo_reporte_parqueadero">Reporte Parqueadero</string>
    <string name="total_recaudado">Total Recaudado:</string>
    <string name="formato_lista_movimientos">"PLACA    |  FECHA INGRESO         |  FECHA SALIDA  "</string>
    <string name="fecha_inicial">Fecha Inicial</string>
    <string name="fecha_final">Fecha Salida</string>
    <string name="fecha_salida_no_valida">La fecha de salida es menor a la fecha inicial</string>
    <string name="fechas_no_diligenciadas">Recuerde seleccionar fecha ingreso y fecha de salida</string>
    <string name="generar_reporte">Generar Reporte</string>
    <string name="sin_configurar">---.---</string>
    <string name="reporte_generado_exitosamente">El reporte se genero exitosamente</string>
</resources>
